# iscc-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
ai/: index.html
ai/exiv2/: index.html
audio/: index.html
changelog/: index.html
conventions/: index.html
devtools/: build_docs.py  checkmeta.py  lf.py
docs/: CNAME  ai.md  audio.md  changelog.md  conventions.md  image.md  index.md  main.md  mediatype.md  metadata.md  mime.md  options.md  text.md  video.md
docs/ai/: exiv2.md
docs/images/: build_docs.py
docs/other/: epub.md  ipfs.md  pdf.md  tools.md
docs/stylesheets/: extra.css
image/: index.html
images/: build_docs.py
ipfs/: index.html
iscc_sdk/: __init__.py  audio.py  bin.py  cli.py  compat.py  container.py  docx_.py  epub.py  exceptions.py  image.py  install.py  ipfs.py  main.py  mediatype.py  metadata.py  mime.py  models.py  monkeys.py  mp7.py  options.py  pdf.py  text.py  thumbnail.py  tools.py  utils.py  video.py
main/: index.html
mediatype/: index.html
metadata/: index.html
mime/: index.html
options/: index.html
other/epub/: index.html
other/ipfs/: index.html
other/pdf/: index.html
other/tools/: index.html
overrides/partials/integrations/analytics/: custom.html
search/: search_index.json
tests/: conftest.py  test_a_tools.py  test_audio.py  test_bin.py  test_cli.py  test_docx.py  test_epub.py  test_image.py  test_ipfs.py  test_iscc_sdk.py  test_main.py  test_metadata.py  test_mime.py  test_models.py  test_mp7.py  test_options.py  test_pdf.py  test_semantic.py  test_text.py  test_thumbnail.py  test_tools.py  test_utils.py  test_video.py
text/: index.html
video/: index.html
