[tool.poetry]
name = "iscc-sdk"
version = "0.8.2"
description = "SDK for creating ISCCs (International Standard Content Codes)"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://sdk.iscc.codes"
repository = "https://github.com/iscc/iscc-sdk"
keywords=["iscc", "identifier", "media", "content", "similarity"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

[tool.poetry.urls]
"Changelog" = "https://sdk.iscc.codes/changelog"
"Coverage" = "https://app.codecov.io/gh/iscc/iscc-sdk"
"Bug Tracker" = "https://github.com/iscc/iscc-sdk/issues"
"Twitter" = "https://twitter.com/iscc_foundation"
"Donate" = "https://iscc.foundation/support"


[tool.poetry.scripts]
idk = 'iscc_sdk.cli:app'


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cython = "*"
iscc-core = "*"
iscc-schema = "*"
python-magic-pure = "*"
platformdirs = "*"
jmespath = "*"
Pillow = "*"
pytaglib = "*"
numpy = "*"
pymupdf = "*"
ebookmeta = "*"
python-docx = "*"
typer = "*"
pillow-heif = "*"
langcodes = "*"
exiv2 = "*"
extractous = "*"
bleach = "*"
pdftext = "*"
pikepdf = "*"
pillow-avif-plugin = "*"
iscc-sci = {version = "*", optional = true}
iscc-sct = {version = "*", optional = true}


[tool.poetry.extras]
sci = ["iscc-sci"]
sct = ["iscc-sct"]


[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
ruff = "*"
coverage = "*"
pytest-cov = "*"
poethepoet = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}
iscc-samples = "*"
codetiming = "*"
mdformat = "*"
mdformat_admon = "*"
mdformat_tables = "*"

[tool.ruff]
line-length = 100

[tool.coverage.run]
omit = ["iscc_sdk/install.py"]

[tool.poe.tasks]
build-docs = { cmd = "poetry run python -m devtools.build_docs", help = "Copy README.md to /docs" }
format-code = { cmd = "poetry run ruff format", help = "Code style formating with ruff" }
format-md = { cmd = "poetry run mdformat --wrap 100 README.md", help = "Markdown formating with mdformat" }
lf = { cmd = "poetry run python -m devtools.lf", help = "Convert line endings to lf"}
test = { cmd = "poetry run pytest --cov=iscc_sdk --cov-fail-under=100 -p no:warnings", help = "Run tests with coverage" }
all = ["format-md", "build-docs", "lf", "format-code", "test"]

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "setuptools>=69.0.2", "wheel"]
build-backend = "poetry.core.masonry.api"
