[project]
name = "iscc-sdk"
version = "0.8.6"
description = "SDK for creating ISCCs (International Standard Content Codes)"
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "iscc",
    "identifier",
    "media",
    "content",
    "similarity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "blake3",
    "loguru",
    "bitarray",
    "xxhash",
    "iscc-schema",
    "python-magic-pure",
    "platformdirs",
    "jmespath",
    "Pillow",
    "pytaglib",
    "numpy",
    "pymupdf",
    "ebookmeta",
    "python-docx",
    "typer",
    "pillow-heif",
    "langcodes",
    "exiv2",
    "extractous",
    "bleach",
    "click",
    "pillow-avif-plugin",
    "iscc-lib",
    "pdf-oxide",
]

[project.optional-dependencies]
sci = [
    "iscc-sci",
    "onnxruntime<1.22.0",
]
sct = [
    "iscc-sct",
    "onnxruntime<1.22.0",
]

[project.urls]
Homepage = "https://sdk.iscc.codes"
Repository = "https://github.com/iscc/iscc-sdk"
Changelog = "https://sdk.iscc.codes/changelog"
Coverage = "https://app.codecov.io/gh/iscc/iscc-sdk"
"Bug Tracker" = "https://github.com/iscc/iscc-sdk/issues"
Twitter = "https://twitter.com/iscc_foundation"
Donate = "https://iscc.foundation/support"

[project.scripts]
iscc-sdk = "iscc_sdk.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "coverage",
    "pytest-cov",
    "poethepoet",
    "mkdocs-material",
    "mkdocstrings[python]",
    "iscc-samples",
    "codetiming",
    "mdformat",
    "mdformat_admon",
    "mdformat_tables",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100

[tool.coverage.run]
omit = ["iscc_sdk/install.py"]

[tool.poe.tasks]
build-docs = { cmd = "uv run python -m devtools.build_docs", help = "Copy README.md to /docs" }
format-code = { cmd = "uv run ruff format", help = "Code style formating with ruff" }
format-md = { cmd = "uv run mdformat --wrap 100 README.md", help = "Markdown formating with mdformat" }
lf = { cmd = "uv run python -m devtools.lf", help = "Convert line endings to lf"}
test = { cmd = "uv run pytest --cov=iscc_sdk --cov-fail-under=100 -p no:warnings", help = "Run tests with coverage" }
all = ["format-md", "build-docs", "lf", "format-code", "test"]
