[project]
name = "iscc-sdk"
version = "0.8.7"
description = "SDK for creating ISCCs (International Standard Content Codes)"
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "iscc",
    "identifier",
    "media",
    "content",
    "similarity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "blake3",
    "loguru",
    "bitarray",
    "xxhash",
    "iscc-schema>=0.5.0",
    "python-magic-pure",
    "platformdirs",
    "jmespath",
    "Pillow",
    "pytaglib",
    "numpy",
    "pymupdf",
    "ebookmeta",
    "python-docx",
    "typer",
    "pillow-heif",
    "langcodes",
    "exiv2",
    "extractous",
    "bleach",
    "pillow-avif-plugin",
    "iscc-lib",
    "pydantic-settings",
    "pdf-oxide",
]

[project.optional-dependencies]
sci = [
    "iscc-sci",
    "onnxruntime",
]
sct = [
    "iscc-sct",
    "onnxruntime",
]

[project.urls]
Homepage = "https://sdk.iscc.codes"
Repository = "https://github.com/iscc/iscc-sdk"
Changelog = "https://sdk.iscc.codes/changelog"
Coverage = "https://app.codecov.io/gh/iscc/iscc-sdk"
"Bug Tracker" = "https://github.com/iscc/iscc-sdk/issues"
Twitter = "https://twitter.com/iscc_foundation"
Donate = "https://iscc.foundation/support"

[project.scripts]
iscc-sdk = "iscc_sdk.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "zuban",
    "ruff",
    "coverage",
    "pytest-cov",
    "pytest-timeout",
    "poethepoet",
    "mkdocs-material",
    "mkdocstrings[python]",
    "iscc-samples",
    "codetiming",
    "mdformat",
    "mdformat_admon",
    "mdformat_tables",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"iscc_sdk/__init__.py" = ["E402", "F401", "F403"]
"iscc_sdk/tools.py" = ["S101", "S202", "S310", "S603"]
"iscc_sdk/epub.py" = ["C901"]
"iscc_sdk/main.py" = ["C901"]

[tool.coverage.run]
omit = ["iscc_sdk/install.py"]

[tool.poe.tasks]
lint = { cmd = "prek run --all-files", help = "Run all pre-commit hooks (formatting, linting)" }
build-docs = { cmd = "uv run python -m devtools.build_docs", help = "Copy README.md to /docs" }
test = { cmd = "uv run pytest --cov=iscc_sdk --cov-fail-under=100 -p no:warnings", help = "Run tests with coverage" }
all = ["lint", "build-docs", "test"]
